# ic-rse-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ic_rse_bot/: __init__.py  __main__.py  checks.py  repo.py
ic_rse_bot/checks/: __init__.py  licence.py  precommit.py  readme.py  report_template.md.jinja
